src/zen/folders/zen-folders.css
/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */

tab-group {
  & .tabbrowser-tab {
    margin-inline-start: 0 !important;
  }
}

tab-group[split-view-group] {
  display: flex;
  flex-wrap: nowrap;
  border-radius: var(--border-radius-medium);
  padding: 0 2px;
  margin-inline: var(--tab-block-margin);
  margin-block: var(--tab-block-margin);
  min-height: var(--tab-min-height);
  outline: var(--tab-outline);
  outline-offset: var(--tab-outline-offset);
  outline-color: var(--tab-selected-outline-color);
  transition: scale 0.1s ease;
  align-items: center;
  --zen-split-view-active-tab-bg: color-mix(
    in srgb,
    var(--zen-toolbar-element-bg),
    transparent 40%
  );

  :root:not([zen-sidebar-expanded='true']) & {
    padding: 0 2px;
    --tab-min-height: 30px;
    --tab-collapsed-width: 38px;
    margin: 2px 0;
    --tab-min-width: 34px;
  }

  & > .tabbrowser-tab {
    --tab-selected-bgcolor: var(--zen-split-view-active-tab-bg);
    --tab-hover-background-color: transparent;
    --tab-selected-shadow: none;
    --border-radius-medium: var(--tab-border-radius);
    --zen-active-tab-scale: 1;

    :root[zen-sidebar-expanded='true'] & {
      --tab-min-height: 28px;
    }

    container-type: inline-size;
    container-name: browser-tab;

    flex: 1 !important;
    padding-inline: 2px !important;
    overflow: clip;

    &:not(:last-child)::after {
      content: '';
      width: 1px;
      height: 16px;
      background-color: light-dark(rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.2));
      position: absolute;
      right: 0;
      top: 50%;
      transform: translateY(-50%);
    }

    :root:not([zen-sidebar-expanded='true']) &:not(:last-child)::after {
      width: 16px;
      height: 1px;
      top: auto;
      bottom: 0;
      right: 50%;
      transform: translateX(50%);
    }

    & .tab-content {
      min-width: 0;
      :root[zen-sidebar-expanded='true'] & {
        justify-content: unset !important;
      }
    }
  }

  &:has(> tab:is([visuallyselected], [multiselected])) {
    background-color: var(--tab-selected-bgcolor);
    box-shadow: var(--tab-selected-shadow);

    & > .tabbrowser-tab {
      --tab-hover-background-color: var(--zen-split-view-active-tab-bg);
      & .tab-background {
        background-color: var(--zen-split-view-active-tab-bg) !important;
      }

      &::after {
        display: none;
      }
    }
  }

  &:active {
    scale: var(--zen-active-tab-scale);
  }

  &:hover {
    background-color: var(--zen-toolbar-element-bg);
  }

  & .tab-close-button,
  & .tab-reset-button {
    margin-inline-end: -3px !important;
    display: none !important;
  }

  @container browser-tab (min-width: 70px) {
    :root[zen-sidebar-expanded='true'] &:hover > .tabbrowser-tab:not([pinned]) .tab-close-button {
      display: block !important;
    }
  }

  @media (prefers-reduced-motion: no-preference) {
    #tabbrowser-tabs[movingtab] & {
      transition: var(--tab-dragover-transition);
    }
  }
}

:root:not([zen-sidebar-expanded='true']) {
  tab-group {
    flex-direction: column;
  }
}

tab-group[split-view-group] .tabbrowser-tab {
  width: 100%;
  max-width: unset;
}

tab-group[split-view-group] .tab-group-label-container {
  visibility: collapse;
}

tab-group[split-view-group] .tab-close-button {
  display: block;
  visibility: visible;
}

tab-group[split-view-group] .tab-group-line {
  display: none;
  background: transparent;
}

tab-group:not([split-view-group]) {
  & .tab-group-label-container {
    min-width: fit-content;
    max-width: 100%;
    height: fit-content !important;
    display: flex;
    justify-content: start;
    margin-top: 10px;
    margin-bottom: 10px;
  }

  & .tab-group-label {
    text-align: start;
    flex-grow: 1 !important;
    min-width: fit-content;
    max-width: 100%;
    font-size: 14px !important;
    display: block !important;
    padding-right: 8px;
  }

  & .tab-group-line {
    display: none !important;
  }

  &[collapsed] .tabbrowser-tab {
    display: none !important;
  }

  &:not([collapsed]) .tabbrowser-tab {
    margin-left: 10px;
  }

  &:not([collapsed]) .tabbrowser-tab::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 2px;
    height: 100%;
    background-color: var(--tab-group-color);
  }
}

.tab-group-line {
  display: none !important;
}

zen-folder {
  display: flex !important;
  flex-direction: column !important;
  --zen-folder-behind-bgcolor: color-mix(in srgb, var(--zen-primary-color), rgba(0, 0, 0, 0.3) 60%);
  --zen-folder-front-bgcolor: light-dark(
    var(--zen-colors-primary-foreground),
    color-mix(in srgb, var(--zen-primary-color), #000 40%)
  );

  :root:not([zen-sidebar-expanded]) {
    width: var(--tab-min-width) !important;
    margin: var(--tab-block-margin) auto !important;
  }

  & > .tab-group-container {
    padding-top: var(--tab-block-margin);

    & > * {
      margin-inline-start: var(--zen-folder-indent, 0.5em);
    }

    & > tab::before {
      background: none !important;
    }
  }

  margin: var(--tab-block-margin);

  & > .tab-group-label-container {
    flex: 0 0 auto !important;
    top: 0 !important;
    --tab-group-color-pale: transparent !important;
    --tab-group-color: transparent !important;
    padding-block-end: 0 !important;
    margin: 0 !important;
    height: 36px !important;
    border-radius: var(--border-radius-medium) !important;
    transition: transform 0.2s ease;
    transition:
      background-color 0.2s ease,
      border-radius 0.2s ease-in-out;
    padding-inline: var(--tab-group-label-padding);
    align-items: center;

    :root:not([zen-sidebar-expanded]) {
      width: var(--tab-min-width) !important;
    }

    .tab-group-folder-icon {
      width: 28px;
      height: 28px;
      margin-inline-end: calc(var(--toolbarbutton-inner-padding) / 3) !important;
      align-content: center;
      pointer-events: none;
      flex-shrink: 0;
    }

    &:hover {
      background-color: var(--tab-hover-background-color) !important;
    }

    &:after {
      display: none;
    }

    & > label {
      width: 100% !important;
      background: transparent !important;
      border: none !important;
      color: var(--sidebar-text-color) !important;
      margin: 0 !important;
      padding-left: 34.5px !important;
      font-weight: 500;
      padding: 0 !important;
      align-self: center !important;
      text-align: start;
    }
  }

  &[collapsed] {
    & > .tabbrowser-tab:not([hidden]) {
      display: flex;
    }

    & > .tab-group-container {
      overflow-y: hidden;
    }
  }
}

/* Tabs popup */
#zen-folder-tabs-popup {
  --arrowpanel-padding: 0;
  width: 250px;
}

#zen-folder-tabs-popup * {
  max-width: -moz-available;
}

#zen-folder-tabs-popup .tabs-list-header {
  display: flex;
  flex-direction: row;
  padding: 6px;
  border-bottom: 1px solid color-mix(in srgb, currentColor, transparent 90%);
  margin-bottom: 2px;
}

#zen-folder-tabs-popup #zen-folder-tabs-list-search {
  background-color: transparent;
  border: none !important;
  outline: none !important;
}

#zen-folder-tabs-popup #zen-folder-tabs-list {
  padding: 4px;
}

#zen-folder-tabs-popup .zen-folder-tabs-list-search-icon {
  width: 16px;
  height: 16px;
  margin: 10px 2px 10px 10px;
  -moz-context-properties: fill;
  fill: currentColor;
  opacity: 0.7;
}

.tabs-list-item-icon {
  width: 16px;
  height: 16px;
  flex-shrink: 0;
  margin-inline-end: 10px;
  margin-inline-start: 4px;
}

.tabs-list-item-labels {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 1;
  min-width: 0;
  color: var(--toolbox-textcolor);
}

.tabs-list-item-label,
.tab-list-item-secondary-label {
  position: relative;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 250px;
  color: light-dark(black, white);
}

.tab-list-item-secondary-label {
  opacity: 0.6;
  font-size: 0.7em;
  font-weight: 500;
}

#zen-folder-tabs-popup .tabs-list-scrollbox {
  overflow: scroll;
}

.tabs-list-item {
  position: relative;
  border-radius: var(--zen-border-radius);
  cursor: default;
}

.tabs-list-item-content {
  position: relative;
  height: 40px;
  display: flex;
  align-items: center;
  direction: ltr;
  padding: 0 var(--tab-inline-padding);
  border-radius: 4px;

  &:hover {
    background-color: color-mix(in srgb, currentColor, transparent 90%);
  }

  &:last-child {
    border-bottom-left-radius: max(calc(var(--panel-border-radius) - 4px), 4px);
    border-bottom-right-radius: max(calc(var(--panel-border-radius) - 4px), 4px);
  }
}

